--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>surge domain</p>
+    <p>bootcamp-2020-demo-by-haris.surge.sh</p>
 </body>
 </html>
