--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello World!</h1>
     <p>bootcamp-2020-demo-by-haris.surge.sh</p>
+    <p>wrote auto deployment yml file</p>
 </body>
 </html>
